<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/available_orders" />
        <item
            android:id="@+id/nav_active_delivery"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/active_delivery" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/profile" />
    </group>
</menu>