<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_orders">

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.driver.resturantandroid.ui.orders.AvailableOrdersFragment"
        android:label="@string/available_orders"
        tools:layout="@layout/fragment_available_orders" />

    <fragment
        android:id="@+id/nav_active_delivery"
        android:name="com.driver.resturantandroid.ui.delivery.ActiveDeliveryFragment"
        android:label="@string/active_delivery"
        tools:layout="@layout/fragment_active_delivery" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.driver.resturantandroid.ui.history.OrderHistoryFragment"
        android:label="@string/order_history"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.driver.resturantandroid.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>